# Mobile-TTS-YDS

./: .dockerignore  .gitignore  Dockerfile.dev  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
QwenMobileTTS/: .gitignore  ARCHITECTURE.md  README.md  settings.gradle.kts
QwenMobileTTS/app/: build.gradle.kts
QwenMobileTTS/wrapper/: gradle-wrapper.properties
benchmark/: README.md  bench_tts_hf.py  bench_tts_quality.py  compare_quality_runs.py  plot_results.py  prepare_quality_manifests.py  requests.txt  run_benchmark.sh
benchmark/configs/: quality.yaml  quality_big.yaml  quality_lite.yaml  quality_mid.yaml
benchmark/configs/dataset/: ru_en_10.yaml  ru_en_100.yaml  ru_en_500.yaml
benchmark/configs/experiment/: base.yaml  qwen06b_full.yaml
benchmark/configs/metrics/: default.yaml  dnsmos_only.yaml  wer_cer_only.yaml
benchmark/configs/model/: onnx_tts.yaml  qwen_06b.yaml
benchmark/data/manifests/: librispeech_asr_en_10.json  librispeech_asr_en_100.json  librispeech_asr_en_500.json  tonebooksplus_validation_ru_10.json  tonebooksplus_validation_ru_100.json  tonebooksplus_validation_ru_500.json
benchmark/quality/: __init__.py  datasets.py  reporting.py
benchmark/quality/metrics/: __init__.py  asr_whisper.py  dnsmos_metric.py
benchmark/quality/model_adapters/: __init__.py  onnx_adapter.py  qwen_adapter.py
python/: run_qwen3_tts.py
python/package/: inference_engine.py  model_assets.py  utils.py
python/quantization/: quantize_dynamic_int8.py  quantize_embeddings_fp16.py  quantize_float16.py  quantize_vocoder_int8.py
(+28 files in other folders)
